added loader to the cards

--- a/src/styles/partials/_variables.scss
+++ b/src/styles/partials/_variables.scss
@@ -1,1 +1,4 @@
 $first-color: #d48f38;
+$loader: #9e9e9e;
+$loader-second: #cfcfcf;
+$loader-spinner: no-repeat radial-gradient(farthest-side,#fcfcfc 92%,#0000);
