added the "found n cards" banner

--- a/src/styles/partials/_variables.scss
+++ b/src/styles/partials/_variables.scss
@@ -1,4 +1,5 @@
 $first-color: #d48f38;
+$second-color:#212529;
 $loader: #9e9e9e;
 $loader-second: #cfcfcf;
 $loader-spinner: no-repeat radial-gradient(farthest-side,#fcfcfc 92%,#0000);
